cabal-version:      2.4
name:               hw89
version:            0.1.0.0

homepage:

-- synopsis:
-- description:
license:            NONE
author:             Daniil Bakushkin
maintainer:         dev.daniil.bakushkin@gmail.com

-- copyright:
extra-source-files: CHANGELOG.md
-- extra-source-files:

library
    exposed-modules:  MyHW8, MyHW9
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      base,
                      mtl,
                      containers,
                      random
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
    default-extensions: ImportQualifiedPost

test-suite hw89-test
    default-language: Haskell2010
    hs-source-dirs:   test
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.17.2.0,
        hw89, 
        hspec, 
        hspec-discover,
        base,
        mtl,
        containers,
        random

    build-tool-depends: hspec-discover:hspec-discover
    other-modules:    TestSpec