cabal-version:      2.4
name:               hw8
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/qilowoq/fp-fall-2023

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Oleg Dmitriev
maintainer:         klyambus@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    ghc-options:      -Wall

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                ,     containers
                ,     text
                ,     mtl
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw8-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0
                 ,    containers  
                 ,    text
                 ,    hspec
                 ,    hw8
                 ,    mtl
    other-modules:    TestSpec