cabal-version:      2.4
name:               hw8
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             ManasyanAL
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    ghc-options:      -Wall

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                 ,    mtl
                 ,    containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw8-test
    default-language: Haskell2010
    ghc-options:      -Wall
    other-modules:    TestSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
                 ,    hw8
                 ,    hspec
                 ,    mtl
                 ,    containers
