cabal-version:      2.4
name:               hw6
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Denis Tereshchenko
maintainer:         dotereschenko@edu.hse.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib8,MyLib9
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0,
                      containers,
                      mtl,
                      text,
                      random,
                      parsec
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw6-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        hw6,
        hspec,
        hspec-discover,
        text,
        mtl,
        random,
        containers
    other-modules:    TestSpec
