cabal-version:      2.4
name:               prac02
version:            0.1.0.0
synopsis:           Practice for Haskell Fall 2023

-- A longer description of the package.
-- description:
homepage:           https://github.com/pluralia/fp-fall-2023/

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             pluralia
maintainer:         irina.artemeva@typefox.io

-- A copyright notice.
-- copyright:
category:           Homework
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    ghc-options:      -Wall

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite prac02-test
    default-language:   Haskell2010
    ghc-options:        -Wall
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            MyLibTest.hs
    other-modules:      TestSpec
    build-depends:      base ^>=4.16.4.0
                 ,      hspec
                 ,      prac02
